--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "homepage": "https://github.com/gaearon/react-dnd",
   "dependencies": {
     "disposables": "^1.0.1",
-    "dnd-core": "https://github.com/randrianov/dnd-core",
+    "dnd-core": "git+https://github.com/randrianov/dnd-core.git",
     "invariant": "^2.1.0",
     "lodash": "^3.10.1"
   },
