--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dnd",
-  "version": "https://github.com/randrianov/react-dnd",
+  "version": "1.1.8",
   "description": "Drag and Drop for React",
   "main": "modules/index.js",
   "scripts": {
